add local on jvm to check vscalc